--- a/app/templates/highway/M212_3LW.html
+++ b/app/templates/highway/M212_3LW.html
@@ -69,8 +69,7 @@
             
             <li> Available in Red color lens.</li>
             
-            <li>Yellow base is standard, other colors available upon re-
-            quest. </li>
+            <li>Yellow base is standard, other colors available upon request. </li>
         </ul>
     </div>
   </section>
