--- a/app/templates/highway/batteryadapter.html
+++ b/app/templates/highway/batteryadapter.html
@@ -4,15 +4,12 @@
 {% block content %}
 <div class="grid bg-default">
 
-
-
   <section class="mt50">
-    
     <ul class="slides">
         <input type="radio" name="radio-btn" id="img-1" checked />
         <li class="slide-container">
         <div class="slide">
-          <img src="/static/marine/load_light/LoadLight1.jpg" />
+          <img src="/static/highway/batteryadapter/6-VoltBatteryAdapter.jpg" />
             </div>
         <div class="nav">
           <label for="img-6" class="prev">&#x2039;</label>
@@ -23,7 +20,7 @@
         <input type="radio" name="radio-btn" id="img-2" />
         <li class="slide-container">
             <div class="slide">
-              <img src="/static/marine/load_light/LoadLight.jpg" />
+              <img src="/static/highway/batteryadapter/6-VoltBatteryAdapter2.jpg" />
             </div>
         <div class="nav">
           <label for="img-1" class="prev">&#x2039;</label>
@@ -34,7 +31,7 @@
         <input type="radio" name="radio-btn" id="img-3" />
         <li class="slide-container">
             <div class="slide">
-              <img src="/static/marine/load_light/LoadLightBottom.jpg" />
+              <img src="/static/highway/batteryadapter/6-VoltBatteryAdapter4.jpg" />
             </div>
         <div class="nav">
           <label for="img-2" class="prev">&#x2039;</label>
@@ -42,43 +39,35 @@
         </div>
         </li>
 
-    </section>
+
+
+
+
+  </section>
+
 
 
 
   <section class="text-right">
     <div class="container mt0">
-        
-        <h1 class="product-description mb60">Product Description</h1>
-            
-      
-    <p class="model"> Load Light </p>
-    <p class="part-number"></p>
-    
-    <div class="container flex-row space-between">
-        
-        <img class="mr50" src="/static/made-in-america-02.png" height="15%" width="15%">
-    </div>
-    
-
+    <h1 class="product-description">Product Description</h1>
+    <p class="model">D-cell Battery Adapter for 6-Volt (BH-6V)</p>
+    <p class="part-number">Part # 01-01806</p>
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li>Exceeds US Coast Guard specifications. </li>
-          <li>Visibility exceeds one nautical mile. </li>
-          <li>Solar panels are internal, providing less chance for damage and malfunction. </li>
-          <li>It is a steady burn light that comes in clear, red, or green. </li>
-          <li>LEDs last 100,000 hours. </li>
-          <li>Lasts 7+ days in between charges. </li>
-          <li>Rechargeable battery should last 2-3 years depending on moisture corrosion. </li>
-          <li>Comes standard with a magnetic base and a carry handle. </li>          
+            <li>Used with 4 D-cell alkaline batteries. </li>
+            <li>6-volt battery life: 17 ampere hours. </li>
+            <li>If used with two 6-volt battery holders the life is doubled to 34-ampere hours. </li>
+            <li>Suited for use in Model 400 lights. </li>
+            
         </ul>
     </div>
   </section>
+
 
 
 </div>
 
 
 {% endblock content %}
-
