--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -16,6 +16,26 @@
     <div class="mt80 mb40"><h1>Model 2006</h1></div>
     <div class="cols mb100">
 
+            <!-- Model 2006 -->
+    
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('model2006') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/model2006/Model2006_1.jpg)">
+                            <div class="inner">
+                                <p>Model 2006</p>
+                        <span>Base Model</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                            <p>Part # 99-02006, 99-02006R</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
 
         <!-- MODEL 2006 + Solar Assist -->
 
@@ -59,7 +79,7 @@
                     </a>
                 </div>
 
-                <!-- Model 2006 -->
+                <!-- Model 2006 D -->
 
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                     <a href="{{ url_for('model2006d') }}">
@@ -81,31 +101,33 @@
                 </div>
 
 
-                <!-- Model 2006 -->
-                
-                <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="{{ url_for('model2006') }}">
-                        <div class="container">
-                            <div class="front" style="background-image: url(/static/highway/model2006/Model2006_1.jpg)">
-                                <div class="inner">
-                                    <p>Model 2006</p>
-                            <span>Base Model</span>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="inner">
-                                <p>Part # 99-02006, 99-02006R</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
 
 
 
     <div class="wrapper  product-line"> 
         <div class="mb40 mt100"><h1>Model 212-3</h1></div>
     <div class="cols mb100">
+
+            <!--  Model 212-3LW -->
+            
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('M212_3LW') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/M212-3LW/Model212-3LW.jpg)">
+                            <div class="inner">
+                                <p>Model 212-3LW</p>
+                        <span></span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Part # 98-81089-3, 98-81089-3R</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
 
 
@@ -150,26 +172,35 @@
                     </a>
                 </div>
 
+                <div class="wrapper  product-line"> 
+                    <div class="mb40 mt100"><h1>Sequential Lights</h1></div>
+                <div class="cols mb100">
+        
+        
+        
+                    <!--  Wireless Channelizing Sequential Device -->
+        
+                    <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                        <a href="{{ url_for('sequential_device') }}">
+                            <div class="container">
+                                <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
+                                    <div class="inner">
+                                        <p>Wireless Channelizing</p>
+                                <span>Sequential Device</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Part # 98-2012SMONO, 98-2012SSMON (Solar Assist)</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+        
 
-            <!--  Model 212-3LW -->
-            
-                <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="{{ url_for('M212_3LW') }}">
-                        <div class="container">
-                            <div class="front" style="background-image: url(/static/highway/M212-3LW/Model212-3LW.jpg)">
-                                <div class="inner">
-                                    <p>Model 212-3LW</p>
-                            <span></span>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="inner">
-                                    <p>Part # 98-81089-3, 98-81089-3R</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
+
 
 
 
@@ -194,25 +225,6 @@
                             <div class="back">
                                 <div class="inner">
                                     <p>Part # 99-00411L, 99-00421L(Red Lens)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-
-                <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="{{ url_for('standaloneflarelight') }}">
-                        <div class="container">
-                            <div class="front" style="background-image: url(/static/highway/standaloneflare/StandaloneFlareLight2.jpg)">
-                                <div class="inner">
-                                    <p>Model 400 Standalone Flare Light</p>
-                            <span></span>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="inner">
-                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -245,13 +257,32 @@
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/Model400ML-2ADADEVICE.jpg)">
                             <div class="inner">
-                                <p>Model 400ML</p>
+                                <p>Model 400ML-2</p>
                         <span>Audible Device</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
                                 <p>Part # 98-10920</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('standaloneflarelight') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/standaloneflare/StandaloneFlareLight2.jpg)">
+                            <div class="inner">
+                                <p>Model 400 Standalone Flare Light</p>
+                        <span></span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -301,77 +332,7 @@
             </div>
 
 
-        <div class="wrapper  product-line"> 
-            <div class="mb40 mt100">
-                <h1>Portable Speed Bumps</h1>
-                <p class="text-center" >Available in 10' and 20' in </p>
-            </div>
-        <div class="cols mb100">
 
-
-        <!-- 10 -->
-        <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('portable10') }}">
-                <div class="container">
-                    <div class="front" style="background-image: url(/static/highway/portablespeedbumps/10PortableSpeedBump.jpg)">
-                        <div class="inner">
-                            <p>10’ Portable Speed Bump</p>
-                    <span></span>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div class="inner">
-                            <p>Part # 97-40000</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <!-- 20 -->
-        <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('portable20') }}">
-                <div class="container">
-                    <div class="front" style="background-image: url(/static/highway/portablespeedbumps/20PortableSpeedBump.jpg)">
-                        <div class="inner">
-                            <p>20’ Portable Speed Bump</p>
-                    <span></span>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div class="inner">
-                            <p>Part # 97-40002</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="wrapper  product-line"> 
-            <div class="mb40 mt100"><h1>Sequential Lights</h1></div>
-        <div class="cols mb100">
-
-
-
-            <!--  Wireless Channelizing Sequential Device -->
-
-            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('sequential_device') }}">
-                    <div class="container">
-                        <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
-                            <div class="inner">
-                                <p>Wireless Channelizing</p>
-                        <span>Sequential Device</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Part # 98-2012SMONO, 98-2012SSMON (Solar Assist)</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
 
 
 
@@ -420,6 +381,25 @@
                 </a>
             </div>
 
+            <!-- LEFT side Mounting Bracket  -->
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('left_MountingBracket') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/mounting_brackets/left/LeftSideMountingBracket2.jpg)">
+                            <div class="inner">
+                                <p>Left Side</p>
+                            <span>used for right lane closure</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Part # 1278R</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
 
             <!-- RIGHT side mounting bracket -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
@@ -441,24 +421,7 @@
             </div>
 
 
-            <!-- LEFT side Mounting Bracket  -->
-            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('left_MountingBracket') }}">
-                    <div class="container">
-                        <div class="front" style="background-image: url(/static/mounting_brackets/left/LeftSideMountingBracket2.jpg)">
-                            <div class="inner">
-                                <p>Left Side</p>
-                            <span>used for right lane closure</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Part # 1278R</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+
 
             <!-- battery adapter -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
@@ -479,6 +442,54 @@
                     </div>
                 </a>
             </div>
+
+
+            <div class="wrapper  product-line"> 
+                <div class="mb40 mt100">
+                    <h1>Portable Speed Bumps</h1>
+                    <p class="text-center" >Available in 10' and 20' in </p>
+                </div>
+            <div class="cols mb100">
+    
+    
+            <!-- 10 -->
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('portable10') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/portablespeedbumps/10PortableSpeedBump.jpg)">
+                            <div class="inner">
+                                <p>10’ Portable Speed Bump</p>
+                        <span></span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Part # 97-40000</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+    
+            <!-- 20 -->
+            <div class="product-col" ontouchstart="this.classList.toggle('hover');">
+                <a href="{{ url_for('portable20') }}">
+                    <div class="container">
+                        <div class="front" style="background-image: url(/static/highway/portablespeedbumps/20PortableSpeedBump.jpg)">
+                            <div class="inner">
+                                <p>20’ Portable Speed Bump</p>
+                        <span></span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Part # 97-40002</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+    
 
 
 
