--- a/app/templates/marine/barge_light.html
+++ b/app/templates/marine/barge_light.html
@@ -93,7 +93,8 @@
           <li>Steady mode will last 30 days using four 6-volt batteries. </li>
           <li>Flash mode will last 120 days using four 6-volt batteries. </li>
           <li>Steady on mode is available in red, green, and clear colors. </li>
-          <li>Flash mode is available in amber. </li>          
+          <li>Flash mode is available in amber. </li>   
+          <li>Available with optional Pilot Location Light attachment for the amber barge light.</li>       
         </ul>
     </div>
   </section>
