--- a/app/templates/marine/model400_led_mooring_light.html
+++ b/app/templates/marine/model400_led_mooring_light.html
@@ -64,7 +64,7 @@
             
       
     <p class="model"> Model 400 LED Mooring Light</p>
-    <p class="part-number">Available in 8” and 12” diameter signal lenses in standard I.T.E. colors</p>
+    <p class="part-number">Part # 98-22000, 98-22000M</p>
     
     <div class="container flex-row space-between">
         
@@ -75,8 +75,14 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li>Both versions can be produced in  polycarbonate.</li>
-          <li> Arrow lenses provided. </li>
+          <li>Tested and certified by US Coast Guard accepted independent laboratory. </li>
+          <li>Meets one nautical mile visibility requirement. </li>
+          <li>White LEDs last 100,000 hours. </li>
+          <li>Solid state circuitry turns light on at dusk and off at day-break. </li>
+          <li>In steady mode the battery will last 60 days. </li> 
+          <li>In flash mode the battery will last 120 days. </li>
+          <li>Available with optional magnetic base. </li>
+          
         </ul>
     </div>
   </section>
