--- a/app/templates/mounting_brackets/right_MountingBracket.html
+++ b/app/templates/mounting_brackets/right_MountingBracket.html
@@ -41,11 +41,11 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-            <li>The correct brackets allow for proper alignment of lights. </li>
-            <li>I.T.E. specifications require the lights to be mounted
-            perpendicular to the ground line. </li>
-            <li>Brackets line up the lights to I.T.E. standards and have stops
-            to eliminate unwanted rotating of the lights. </li>
+          <li>The right side mounting bracket is used for a Left lane closure. </li>
+          <li>The correct bracket allows for the proper alignment of lights. </li>
+          <li>I.T.E. specifications require the lights to be mounted perpendicular to the ground line. </li>
+          <li>The brackets line up the lights to I.T.E. standards and have stops to eliminate unwanted rotating of the lights. </li>
+          
         </ul>
     </div>
   </section>
