--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -20,7 +20,7 @@
                         <img src="/static/headshots/liam4x4.png">
                         <div>
                             <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
-                            <h2>Liam Edgecomb</h2>
+                            <h2>Liam Edgecombe</h2>
                             <h3>Assistant General Manager</h3>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
 
 
         <div class="contact-container">  
-            <form target="_blank" id="contact" action="https://formsubmit.co/37b2d7dbd2ca1a714bc40ff1c11adbcc" method="POST">
+            <form target="_blank" id="contact" action="https://formsubmit.co/sales@empco-lite.com" method="POST">
                 <h3>Request Information</h3>
                 <h4>Contact our sales team for a custom quote on products</h4>
                 <fieldset>
@@ -59,7 +59,7 @@
                     <input placeholder="Your Phone Number" type="tel" name="Phone" tabindex="3" required>
                 </fieldset>
                 <fieldset>
-                    <input placeholder="Your Company" type="url" name="Company url" tabindex="4" required>
+                    <input placeholder="Your Company" type="text" name="Company url" tabindex="4" required>
                 </fieldset>
                 <fieldset>
                     <textarea placeholder="Type your message here...." name="Message" tabindex="5" required></textarea>
