--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,14 +7,20 @@
 <div class="accordion">
     <ul>
         <li>
+            <div> <a href="{{ url_for('highway_construction_lighting') }}">
+                <h2>Highway Lighting</h2>
+                </a> </div>
+        </li>
+        <li>
+            <div> <a href="{{ url_for('marine_lighting') }}">
+                <h2>Marine Lighting</h2>
+                </a> </div>
+        </li>
+        
+        <li>
         <div><a href="{{ url_for('airport_lighting') }}">
             <h2>Airport Lighting</h2>
             </a></div>
-        </li>
-        <li>
-        <div> <a href="{{ url_for('marine_lighting') }}">
-            <h2>Marine Lighting</h2>
-            </a> </div>
         </li>
         <li>
         <div> <a href="{{ url_for('railroad_lighting') }}">
@@ -22,11 +28,7 @@
             </a> </div>
         </li>
 
-        <li>
-        <div> <a href="{{ url_for('highway_construction_lighting') }}">
-            <h2>Construction Lighting</h2>
-            </a> </div>
-        </li>
+
         
     </ul>
 </div>
@@ -141,7 +143,7 @@
             <input type="radio" name="radio-btn" id="img-1" checked />
             <li class="slide-container">
             <div class="slide">
-                <img src="/static/highway/2006solarplus/Model2006SolarAssist3.jpg" />
+                <img src="/static/highway/S_solar212-3/Model212-3SSolarAssist1.jpg" />
                 </div>
             <div class="nav">
                 <label for="img-6" class="prev">&#x2039;</label>
@@ -152,7 +154,7 @@
             <input type="radio" name="radio-btn" id="img-2" />
             <li class="slide-container">
                 <div class="slide">
-                    <img src="/static/highway/2006solarplus/Model2006solarAssist1.jpg" />
+                    <img src="/static/highway/S_solar212-3/Model212-3SSolarAssist2.jpg" />
                 </div>
             <div class="nav">
                 <label for="img-1" class="prev">&#x2039;</label>
@@ -163,7 +165,7 @@
             <input type="radio" name="radio-btn" id="img-3" />
             <li class="slide-container">
                 <div class="slide">
-                    <img src="/static/highway/2006solarplus/Model2006SolarAssist.jpg" />
+                    <img src="/static/highway/S_solar212-3/Model212-3SSolarAssist3.jpg" />
                 </div>
             <div class="nav">
                 <label for="img-2" class="prev">&#x2039;</label>
