--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -72,7 +72,7 @@
                             </div>
                             <div class="back">
                                 <div class="inner">
-                                <p>Part # 99-0206SOLAR, 99-0207SOLAR(Red Lens)</p>
+                                <p>Part # 99-0206SOLAR</p>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                     <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                         <a href="{{ url_for('sequential_device') }}">
                             <div class="container">
-                                <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
+                                <div class="front" style="background-image: url(/static/highway/Wireless_channeling/Wireless2ChannelizingSequentialDevice.jpg)">
                                     <div class="inner">
                                         <p>Wireless Channelizing</p>
                                 <span>Sequential Device</span>
@@ -218,8 +218,8 @@
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
                                 <div class="inner">
-                                    <p>Model 400 LED PC</p>
-                            <span></span>
+                                    <p>Model 400</p>
+                            <span>LED PC</span>
                                 </div>
                             </div>
                             <div class="back">
@@ -276,8 +276,8 @@
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/standaloneflare/StandaloneFlareLight2.jpg)">
                             <div class="inner">
-                                <p>Model 400 Standalone Flare Light</p>
-                        <span></span>
+                                <p>Model 400 </p>
+                        <span>Standalone Flare Light</span>
                             </div>
                         </div>
                         <div class="back">
