--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,16 +18,16 @@
 
     <nav class="navbar">
         <div class="topBar">
-            <img id="nav-logo" src="/static/Empco-Lite-logo-07.png" height="100%" width="100%">
-            <img id="nav-logo" src="/static/made-in-usa-stamp.png" height="50%" width="50%">
+            <a href="{{ url_for('index') }}"><img id="nav-logo" src="/static/Empco-Lite-logo-07.png" height="100%" width="100%"></a>
+            <a href="{{ url_for('index') }}"><img id="nav-logo" src="/static/made-in-usa-stamp.png" height="40%" width="40%"></a>
         </div>
             <i class="uil uil-bars toggle"></i>
         </div>
         <ul class="navMenu">
             <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('product_line') }}">Product Line</a></li>
             <li><a href="{{ url_for('sister_companies') }}">Divisions</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
-            <li><a href="{{ url_for('product_line') }}">Product Line</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
             
