--- a/app/templates/marine/barge_light.html
+++ b/app/templates/marine/barge_light.html
@@ -76,10 +76,13 @@
       
     <p class="model">Barge Light </p>
     <p class="part-number">Part # 98-23400, 98-23400L, 98-23400LM, 98-23400M, 98-23400R, 98-23400RM</p>
-    
+    <p>Commonly purchased with: </p>
+    <a href="{{ url_for('pilot_location_light') }}" class="btn btn-outline mt20">Pilot Location Light</a> 
+
     <div class="container flex-row space-between">
-        
+
         <img class="mr50" src="/static/made-in-america-02.png" height="15%" width="15%">
+
     </div>
     
 
