--- a/app/templates/product_line.html
+++ b/app/templates/product_line.html
@@ -19,33 +19,35 @@
       <h2 class="medium-title">Your Lighting Needs are Covered</h2>
 
       <a class="card" href="{{ url_for('highway_construction_lighting') }}">
-        <div class="card__background" style="background-image: url(/static/pexels/pexels-ave-calvar-martinez-4705093.jpg)"></div>
+        <div class="card__background" style="background-image: url(/static/pexels/highway-product-line.png)"></div>
         <div class="card__content">
           
           <h3 class="card__heading">Highway Lighting</h3>
         </div>
       </a>
-      
+
+
+      <a class="card" href="{{ url_for('marine_lighting') }}">
+        <div class="card__background" style="background-image: url(/static/pexels/pexels-tom-fisk-9552905.jpg)"></div>
+        <div class="card__content">
+          
+          <h3 class="card__heading">Marine Lighting</h3>
+        </div>
+      </a>
+
       <a class="card" href="{{ url_for('airport_lighting') }}">
-        <div class="card__background" style="background-image: url(/static/pexels/pexels-igor-starkov-761981.jpg)"></div>
+        <div class="card__background" style="background-image: url(/static/pexels/pexels-ekky-wicaksono-3760564.jpg)"></div>
         <div class="card__content">
           
           <h3 class="card__heading">Airport Lighting</h3>
         </div>
-      </a>
+      </a> 
+
       <a class="card" href="{{ url_for('railroad_lighting') }}">
-        <div class="card__background" style="background-image: url(/static/pexels/pexels-trace-hudson-2365701.jpg)"></div>
+        <div class="card__background" style="background-image: url(/static/pexels/pexels-brett-sayles-981306.jpg)"></div>
         <div class="card__content">
           
           <h3 class="card__heading">Railroad Lighting</h3>
-        </div>
-      </a>
-
-      <a class="card" href="{{ url_for('marine_lighting') }}">
-        <div class="card__background" style="background-image: url(/static/pexels/pexels-albin-berlin-906982.jpg)"></div>
-        <div class="card__content">
-          
-          <h3 class="card__heading">Marine Lighting</h3>
         </div>
       </a>
 
